# src/api/routers/users.go
@@ -10,4 +10,5 @@ import (
 func User(router *gin.RouterGroup, cfg *config.Config) {
 	h := handlers.NewUsersHandler(cfg)
 	router.POST("send-otp", middlewares.OtpLimiter(cfg), h.SendOtp)
+	router.POST("login-by-username", h.LoginByUsername)
 }
